fix app env validation consistency
